deployment-strategies/canary/v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: online-shop
    version: v1
  name: online-shop-v1-deploy
  namespace: canary-ns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: online-shop
  template:
    metadata:
      labels:
        app: online-shop
        version: v1
    spec:
      containers:
        - image: amitabhdevops/online_shop
          name: online-shop-container
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 25m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 20Mi
