deployment-strategies/canary/v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canary
    version: v2
  name: canary-v2-deployment
  namespace: canary-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canary
      version: v2
  template:
    metadata:
      labels:
        app: canary
        version: v2
    spec:
      containers:
        - image: abhradippaul/deployment-strategies:v2
          name: canary-container
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 25m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 20Mi
