deployment-strategies/canary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: canary
  name: canary-svc
  namespace: canary-ns
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: canary
